--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "typescript": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "typescript": "^5.4.5"
   }
 }
